--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>Document</title>
+    <title>Mem Game</title>
 </head>
 
 <body>
     <div class="main-container">
         <div class="header">
             <div>
-                Score: <span class="score"></span>
+                Score: <span class="score">0</span>
             </div>
             <div>
                 High Score: <span class="high-score"></span>
